RESOLVED FIXED131917
[Cocoa] Crash when setting a bundle parameter to nil
https://bugs.webkit.org/show_bug.cgi?id=131917
Summary [Cocoa] Crash when setting a bundle parameter to nil
mitz
Reported 2014-04-20 11:44:51 PDT
[Cocoa] Crash when setting a bundle parameter to nil
Attachments
Handle nil values properly (3.45 KB, patch)
2014-04-20 11:48 PDT, mitz
sam: review+
mitz
Comment 1 2014-04-20 11:48:40 PDT
Created attachment 229771 [details] Handle nil values properly
mitz
Comment 2 2014-04-20 13:54:48 PDT
Note You need to log in before you can comment on or make changes to this bug.